styling/accessibility.css
body {
    margin: 0;
    padding: 0;
    /* background: linear-gradient(to bottom, #002d75, #05acff);
    background: linear-gradient(to bottom, #002d75, #05acff); */
    /* background: linear-gradient(to bottom, #ffffff, #d5d5d5); */
    height: 100vh;
}

canvas {
    display: none;
}

.player {
    text-align: center;
    margin-top: 50px;
}

.title, .artist {
    display: flex;
    justify-content: center;
}

.title h1, .artist h1 {
    /* width: 60%; */
    padding: 0;
    margin: 0;
    width: 300px;
    text-align: left;
    font-weight: 700;
    color: white;
    font-family: "Open Sans", sans-serif;
    font-size: 24px;
}

.artist h1 {
    margin-top: 5px;
    font-size: 18px;
    color: white;
    font-weight: 500;
}

.container { 
    display: flex;
    justify-content: center;
    align-items: center;
}

.wrapperIcons {
    display: flex;
    justify-content: space-between;
    margin-bottom: 50px;
}

.wrapperIcons i {
    color: white;
    font-size: 30px;
    margin-top: 10px;
}

.wrapperIcons .profileIcon {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-image: url(/pfp1.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.cover {
    width: 300px;
    height: 300px;
    margin: 15px auto;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
}

.controls i {
    margin: 40px 15px;
    font-size: 35px;
    color: white;
}

.controls button {
    margin: 0 5px;
}

.progress {
    width: 100%;
    margin: 50px 0px 0px 0px;
}

.progress span {
    text-align: center;
    color: white;
    font-family: "Open Sans", sans-serif;
    font-size: 20px;
    font-weight: 500;
}

.progressTimes {
    display: flex;
    justify-content: space-between;
}

#progressBar {
    position: relative;
    background-color: white;
    margin: 50px 0 5px 0;
    height: 20px;
    border-radius: 50px;
}

#progressBarFull {
    position: relative;
    z-index: -999;
    bottom: 25px;
    height: 20px;
    filter: brightness(.25);
    border-radius: 50px;
}

#progressBall {
    right: 0%;
    top: 50%;
    transform: translate(50%, -50%);
    position: absolute;
    width: 25px;
    height: 25px;
    border-radius: 50px;
    box-shadow: -2px 0px 5px black;
    transition: .2s ease-in-out;
}

#progressBall:hover {
    transition: .2s ease-in-out;
    filter: brightness(.8);
}

input[type="range"] {
    -webkit-appearance: none;
    -moz-apperance: none;
    appearance: none;

    margin-top: 20px;
    width: 100%;
    height: 20px;
    border-radius: 20px;
    background: linear-gradient(to right, green 0%, orange 50%, red 100%);
    cursor: pointer;
    outline: none;
    border: none;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 30px;
    height: 30px;
    background: #ffffff;
    border-radius: 50%; 
    cursor: pointer;
    border: none;
    transition: background-color 0.3s ease;
}

.thumb-gradient {
    background: linear-gradient(to right, yellow 0%, orange 50%, red 100%);
}

.volume {
    display: flex;
    justify-content: center;
    align-items: center;
}

.volume i {
    color: white;
    font-size: 24px;
    margin-top: 20px;
}

.volume i:nth-child(1) {
    margin-right: 20px;
}

.volume i:nth-child(3) {
    margin-left: 20px;
}

